--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
+  "name": "react-code-challenge",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "lodash": "4.17.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-redux": "9.1.2",
+    "redux": "5.0.1",
+    "axios": "1.7.7"
   },
   "devDependencies": {
-    "serve": "11.2.0",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.15",
-    "typescript": "4.4.4",
-    "parcel-bundler": "1.6.1",
     "vite": "^5.0.11",
     "@vitejs/plugin-react": "^4.2.1"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
